[package]
name = "oj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
cond = "1.0.5"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.96"

[dev-dependencies]
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
