[package]
name = "judger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
cond = "1.0.5"
exec = "0.3.1"
libc = "0.2.155"
rlimit = "0.10.1"
seccomp-sys = "0.1.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
wait-timeout = "0.2.0"
wait4 = "0.1.3"

[[bin]]
name = "sandbox"

[[bin]]
name = "test_config"